# bookFlix

./: .env  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  db_extensions.py  key3.pub  main.py  pyproject.toml  setup.cfg
All_films_after/: all_films_after.html
All_films_after/css/: all_films_after.css
All_films_after/js/: all_films_after.js
All_films_before/: all_films_before.html
All_films_before/css/: all_films_before.css
Author_with_button/: author_with_button.html
Author_with_button/css/: author_with_button.css
Author_with_button/js/: author_with_button.js
Author_without_button/: author_without_button.html
Author_without_button/css/: author_without_button.css
Edit_article/: edit_article.html
Edit_article/css/: edit_article.css
Edit_article/js/: edit_article.js
Favourites/: favourites.html
Favourites/css/: favourites.css
History/: history.html
Main_page_after/: main_page_after.html
Main_page_after/css/: main_page_after.css
Main_page_before/: main_page_before.html
Main_page_before/css/: main_page_before.css
More_about_after/: more_about_after.html
More_about_after/css/: more_about_after.css
More_about_before/: more_about_before.html
More_about_before/css/: more_about_before.css
More_about_book_after/: more_about_book_after.html
More_about_book_after/css/: more_about_book_after.css
More_about_book_before/: more_about_book_before.html
More_about_book_before/css/: more_about_book_before.css
More_about_film_after/: more_about_film_after.html
More_about_film_after/css/: more_about_film_after.css
More_about_film_before/: more_about_film_before.html
More_about_film_before/css/: more_about_film_before.css
More_about_film_before/js/: more_about_film_before.js
My_articles/: my_articles.html
My_articles/css/: my_articles.css
My_subscribes/: my_subscribes.html
My_subscribes/css/: my_subscribes.css
New_article/: new_article.html
Reading_diary/: reading__dairy.html
Reading_diary/css/: reading_dairy.css
Reading_diary/js/: reading_dairy.js
Registration/: registration.html
Registration/css/: registration.css
Registration/js/: registration.js
Search_with_filters/: search_with_filters.html
Search_with_filters/css/: search_with_filters.css
Search_with_filters/js/: search_with_filters.js
Whole_article/: whole_article.html
Whole_article/css/: whole_article.css
Whole_article/js/: whole_article.js
alembic/: env.py
alembic/versions/: c1bd6ee7e211_add_teble_for_users.py
api/: app.py
bookflix/: Dockerfile  Makefile  README.md  pyproject.toml
bookflix-react/: .eslintrc.json  .prettierrc  package-lock.json  package.json
bookflix-react/public/: index.html
bookflix-react/src/: App.js  index.css  index.js
bookflix-react/src/components/: PreferencesCheck.jsx  SessionChecker.jsx
bookflix-react/src/redux/: accountReducer.js  articlePageReducer.js  articleReducer.js  authReducer.js  bookPageReducer.js  feedbackReducer.js  filmPageReducer.js  headerReducer.js  (+5 more)
bookflix/api/: app.py
bookflix/db/: session.py
bookflix/docker_compose/: storage.yaml
common/: settings.py
db/: models.py  session.py
docker_compose/: app.yaml  storage.yaml
migrations/: env.py
migrations/versions/: 42f37a8c8eb6_add_is_preferences.py  59f873602cf3_some_changes.py  5bb007a171ff_create_all_tables.py  7c8aa232e177_database_creation.py  aacbaba6a1f9_booksdiary_db.py  c224ce80e736_booksdiary_db.py  eccbd7262111_create_new_tables_for_users.py  f1910b36d225_create_and_uuid_add.py  f20f304b1379_bookdiary_added.py
react/: .prettierrc  Readme.txt
react/public/: index.html
react/src/: App.css  index.css  index.js
server/: README.md  db_extensions.py  main.py  pyproject.toml
server/migrations/versions/: aacbaba6a1f9_booksdiary_db.py
server/src/api/: app.py  gigachat.py  movie_handlers.py  recommendation_books.yaml  recommendation_movies.yaml
server/src/bookdiary/: mailer.py
server/src/bookdiary/models/: models.py
server/src/bookdiary/routers/: handlers.py
server/src/bookdiary/schemas/: exceptions.py  user_subs.py
server/src/config/: project_config.py
server/src/config/db/: session.py
server/src/models/: users.py
server/tests/articles_test/: test_create_articles.py  test_get_all_user_articles.py  test_search_articles_by_query.py
server/tests/likes_test/: test_like.py
server/tests/src_test/: test_auth.py
server/tests/subs_test/: test_get_all_user_subs.py  test_sub.py
src/api/: app.py  auth.py  book_handlers.py  gigachat.py  handlers.py  list_handlers.py  movie_handlers.py  prompt.yaml  search_handlers.py  short_content.yaml  user_create_logic.py  user_handlers.py
src/bookdiary/: mailer.py
src/config/: project_config.py
src/models/: dals.py  user.py  users.py
src/schemas/: auth_schemas.py  user.py
tests/: config_test.py  conftest.py  test.py  test_api_books.py  test_api_gigachat.py  test_api_movies.py  test_auth.py  test_handlers.py  test_user.py
tests/articles_test/: test_article_page.py  test_delete_article.py  test_edit_article.py
tests/likes_test/: test_unlike.py
tests/src_test/: test_api_books.py  test_api_gigachat.py  test_api_movies.py  test_auth.py  test_user.py
tests/subs_test/: test_unsub.py
(+188 files in other folders)
