[tool.poetry]
name = "bookflix"
version = "0.1.0"
description = ""
authors = ["zmskv <zmskvxd@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
sqlalchemy = "^2.0.29"
docker = "^7.0.0"
pydantic = "^2.6.4"
envparse = "^0.2.0"
psycopg = "^3.1.18"
psycopg-binary = "^3.1.18"
pydantic-settings = "^2.2.1"
alembic = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
