[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["zmskv <zmskvxd@gmail.com>, khnychenkoav <khnartem@gmail.com>, malmax5 <malmax5@mail.ru>, milkyway <mihateren2003@gmail.com>, aazaretskaya <nastya.zaretskaya.1995@gmail.com>"]
description = ""
name = "bookflix"
package-mode = false
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
alembic = "^1.13.1"
asyncpg = "^0.29.0"
cinemagoer = "2023.5.1"
datetime = "^5.5"
fastapi = "^0.110.0"
fastapi-users = {extras = ["sqlalchemy"], version = "^13.0.0"}
gigachain = "^0.1.13.2"
gigachat = "^0.1.22"
google-api-python-client = {extras = ["googleapiclient"], version = "^2.125.0"}
greenlet = "^3.0.3"
httpx = "^0.27.0"
imdbpy = "^2022.7.9"
psycopg2 = "^2.9.9"
psycopg2-binary = "^2.9.9"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
python = "^3.11"
sqlalchemy = "2.0.29"
tmdbv3api = "^1.9.0"
uvicorn = "^0.29.0"

[tool.poetry.group.dev.dependencies]
autoflake = "^2.3.1"
flake8 = "^7.0.0"
mypy = "^1.9.0"
pylint = "^3.1.0"
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"
pytest-cov = "^5.0.0"
toml-sort = "^0.23.1"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = [
  ".",
  "src"
]
